--- a/app/src/main/res/layout/activity_post_inside_playing.xml
+++ b/app/src/main/res/layout/activity_post_inside_playing.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <RelativeLayout
         android:id="@+id/post_top"
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
             android:id="@+id/image_cart_09"
             android:layout_width="match_parent"
             android:layout_height="33dp"
-            android:src="@drawable/_9"
+            android:src="@drawable/baseline_sports_esports_24"
             android:gravity="center" />
     </RelativeLayout>
 
@@ -29,22 +30,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    
+
         <RelativeLayout
             android:id="@+id/post1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/catImg"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/dogImg"
+                android:layout_gravity="center"
+                app:cardElevation="0dp"
+                app:cardCornerRadius="15dp"
                 android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/cat" />
+                android:layout_height="60dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/dog" />
+            </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:id="@+id/post_userText"
                 android:gravity="bottom"
-                android:layout_toRightOf="@+id/catImg"
+                android:layout_toRightOf="@+id/dogImg"
                 android:layout_width="230dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -55,11 +65,11 @@
                     android:textColor="#3C567B"
                     android:textStyle="bold"
                     android:textSize="17dp"
-                    android:text="고양이 사랑"/>
+                    android:text="강아지 사랑"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2023.10.24 17:52"
+                    android:text="2023.10.23 11:15"
                     android:textSize="13dp"/>
             </LinearLayout>
             <Button
@@ -69,49 +79,47 @@
                 android:layout_toRightOf="@id/post_userText"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="2/5" />
+                android:drawableLeft="@drawable/people"
+
+                android:text="3/6" />
         </RelativeLayout>
 
+
         <LinearLayout
+            android:background="@drawable/post_background"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:layout_marginTop="15dp">
+            <TextView
+                android:paddingTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#3C567B"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="장소 : 롯데월드"/>
+            <TextView
+                android:paddingTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#3C567B"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="날짜/시간 : 10월 31일 8시"
+                android:paddingBottom="10dp"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:padding="19dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@drawable/post_background"
             android:layout_marginTop="18dp">
-            <ImageView
-                android:paddingLeft="10dp"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/tissue"/>
-            <LinearLayout
-                android:id="@+id/post_tissueText"
-                android:gravity="center_vertical"
-                android:layout_width="270dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingLeft="20dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#3C567B"
-                    android:textStyle="bold"
-                    android:text="제품명 : 깨끗한나라 물티슈 70매 x 10개"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#3C567B"
-                    android:textStyle="bold"
-                    android:text="가격 : 19,900원(인당 1,990원)"/>
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:padding="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/post_background"
-            android:layout_marginTop="20dp">
 
             <LinearLayout
                 android:id="@+id/post_tissueExtraText"
@@ -124,16 +132,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="13dp"
-                    android:text="집이 너무 더러워요"
+                    android:text="롯데월드 같이 갈 친구들 구해요"
                     android:textColor="#3C567B"
-                    android:textSize="25dp"
+                    android:textSize="23dp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="13dp"
-                    android:text="집이 너무 지저분해서 물티슈가 필요한데 인간적으로 10개는 너무 많은 것 같아서 공구합니다....ㅠ"
+                    android:text="날씨가 시원해져서 놀이공원이 가고싶은데... 같이 가실 분 있으신가요ㅎㅎ 아무나 환영입니다!!"
                     android:textColor="#687F9F"
                     android:textStyle="bold" />
 
@@ -156,7 +164,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingLeft="10dp"
-                            android:text="19개"
+                            android:text="15개"
                             android:textColor="#3C567B" />
                     </LinearLayout>
 
@@ -177,14 +185,14 @@
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_marginLeft="10dp"
-                            android:src="@drawable/star" />
+                            android:src="@drawable/star_blank" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
         <Button
             android:layout_marginLeft="283dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="13dp"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:text="참여하기"
@@ -197,42 +205,56 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
+                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="댓글"
                 android:textStyle="bold"
-                android:textSize="20dp"
+                android:textSize="19dp"
                 android:textColor="#3C567B"/>
-            <LinearLayout
-                android:padding="10dp"
+            <RelativeLayout
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:background="@drawable/post_background"
-                android:layout_marginTop="18dp">
+                android:layout_marginTop="15dp">
+                <LinearLayout
+                    android:id="@+id/comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#3C567B"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:text="내 꿈은 램지"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#3C567B"
+                        android:textStyle="bold"
+                        android:textSize="14dp"
+                        android:text="너무 좋아요!!"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="2023.10.23 13:30"
+                        android:textSize="13dp"/>
+                </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#3C567B"
-                    android:textStyle="bold"
-                    android:textSize="17dp"
-                    android:text="강아지 사랑"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#3C567B"
-                    android:textStyle="bold"
-                    android:textSize="15dp"
-                    android:text="바로 사야겠네요!!!"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2023.10.25 13:12"
-                    android:textSize="13dp"/>
-            </LinearLayout>
+                    android:text="대댓글 달기"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignBottom="@id/comment"/>
+
+            </RelativeLayout>
 
             <LinearLayout
-                android:paddingTop="12dp"
+                android:paddingTop="10dp"
                 android:paddingLeft="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -251,15 +273,15 @@
                         android:layout_height="wrap_content"
                         android:textColor="#3C567B"
                         android:textStyle="bold"
-                        android:textSize="15dp"
-                        android:text="옥지얌"/>
+                        android:textSize="14dp"
+                        android:text="강아지 사랑"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#3C567B"
                         android:textStyle="bold"
-                        android:textSize="15dp"
-                        android:text="저도 참여해야겠네요 ㅎㅎ!"/>
+                        android:textSize="14dp"
+                        android:text="바로 연락 주세요!! ㄱㄱ"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -267,13 +289,18 @@
     </LinearLayout>
 
     <EditText
-        android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/text_background"
+        android:drawableRight="@drawable/send"
         android:hint="댓글을 입력하세요."
+        android:textSize="15dp"
         android:paddingLeft="30dp"
-        />
+        android:paddingRight="15dp" />
 
 </RelativeLayout>
