--- a/app/src/main/res/layout/activity_gonggu_writing.xml
+++ b/app/src/main/res/layout/activity_gonggu_writing.xml
@@ -91,7 +91,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/whiteblue">
 
@@ -127,7 +127,6 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/blue"
                 android:orientation="horizontal">
 
                 <TextView
@@ -140,8 +139,10 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:layout_gravity="center"
+                    android:background="@drawable/blue"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="30dp"
                     android:layout_marginStart="10dp" />
 
 
