--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -169,6 +169,27 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="#3c567b"/>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/yellow">
+            <ImageView
+                android:layout_marginStart="20dp"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:src="@drawable/close"/>
+            <TextView
+                android:layout_marginStart="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="로그아웃"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="#3c567b"/>
+
         </RelativeLayout>
 
 
