--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -71,6 +71,7 @@
             android:textStyle="bold"
             android:textColor="#3c567b"/>
         <EditText
+            android:id="@+id/nickname_edit_txt"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -86,6 +87,7 @@
             android:textStyle="bold"
             android:textColor="#3c567b"/>
         <EditText
+            android:id="@+id/name_edit_txt"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -101,6 +103,7 @@
             android:textStyle="bold"
             android:textColor="#3c567b"/>
         <EditText
+            android:id="@+id/phone_edit_txt"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
