--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -172,6 +172,7 @@
 
         </RelativeLayout>
         <RelativeLayout
+            android:id="@+id/logout"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
